# monitoramento-impressoras

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  dockerfile  impressoras.xlsx  pyproject.toml
scripts/: seed_impressoras.py
src/monitoramento_impressoras/: main.py
src/monitoramento_impressoras/api/: rotas_impressao.py  rotas_manutencao.py  rotas_telemetria.py
src/monitoramento_impressoras/core/: database.py
src/monitoramento_impressoras/models/: impressora_model.py  incidente_model.py
src/monitoramento_impressoras/schemas/: impressao_schema.py  incidente_schema.py
src/monitoramento_impressoras/services/: impressao_service.py  zabbix_service.py
src/monitoramento_impressoras/templates/: index.html
tests/: conftest.py  test_main.py  test_manutencao.py  test_telemetria.py
