[project]
name = "monitoramento-impressoras"
version = "0.1.0"
description = ""
authors = [
    {name = "CRFjonathas",email = "jonathas.github@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.50.2,<0.51.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ruff (>=0.15.21,<0.16.0)"
]

[tool.poetry]
packages = [{include = "monitoramento_impressoras", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
